Bug 492092 - Dragging the scrollbar on the LSP plugin popup box into the popup closes the popup
Summary: Dragging the scrollbar on the LSP plugin popup box into the popup closes the ...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-23 16:10 UTC by Adam Fontenot
Modified: 2024-08-23 18:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording of issue (2.63 MB, video/webm)
2024-08-23 16:10 UTC, Adam Fontenot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Fontenot 2024-08-23 16:10:22 UTC
Created attachment 172887 [details]
screen recording of issue

SUMMARY

Normally, since it's difficult to control your mouse movements when you're dragging a scrollbar, the window stays in focus and scrolling continues as long as you continue holding the mouse button once you've begun dragging.

This work normally when you drag *outside* the popup box created by the LSP plugin, but if you drag the scrollbar *into* the popup box, it closes the popup after a second or two.

STEPS TO REPRODUCE
1. Scroll in an LSP plugin popup box as described above. You need to click on the scrollbar itself, not use other scrolling methods like the scroll wheel.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.5-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Waqar Ahmed 2024-08-23 18:09:33 UTC
Git commit ddb9924e5941ab5d7b87c18bb8a8853070b10f64 by Waqar Ahmed.
Committed on 23/08/2024 at 18:09.
Pushed by waqar into branch 'master'.

Fix tooltip hides on scrolling using scrollbar

M  +10   -6    apps/lib/texthint/tooltip.cpp

https://invent.kde.org/utilities/kate/-/commit/ddb9924e5941ab5d7b87c18bb8a8853070b10f64
Comment 2 Waqar Ahmed 2024-08-23 18:24:15 UTC
Git commit 9198d8f8a002bce9f885e7acb51f402eaaecb72e by Waqar Ahmed.
Committed on 23/08/2024 at 18:21.
Pushed by waqar into branch 'release/24.08'.

Fix tooltip hides on scrolling using scrollbar
(cherry picked from commit ddb9924e5941ab5d7b87c18bb8a8853070b10f64)

M  +10   -6    apps/lib/texthint/tooltip.cpp

https://invent.kde.org/utilities/kate/-/commit/9198d8f8a002bce9f885e7acb51f402eaaecb72e