Fix tooltip hides on scrolling using scrollbar

BUG: 492092
(cherry picked from commit ddb9924e5941ab5d7b87c18bb8a8853070b10f64)